DFR-1885: FR Consent and Contested - ability to attach a document to General Email